# backend/docs/swagger.yaml
@@ -151,6 +151,15 @@ definitions:
       message:
         type: string
     type: object
+  DewaSRY_sociomile-app_pkg_dtos_responsedto.ConversationListPaginateResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/DewaSRY_sociomile-app_pkg_dtos_responsedto.ConversationResponse'
+        type: array
+      metadata:
+        $ref: '#/definitions/DewaSRY_sociomile-app_pkg_dtos_responsedto.PaginateMetaData'
+    type: object
   DewaSRY_sociomile-app_pkg_dtos_responsedto.ConversationListResponse:
     properties:
       conversations:
@@ -703,6 +712,71 @@ paths:
       summary: Get my conversations
       tags:
       - conversations
+  /guest/conversations:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a guest conversation by its ID
+      parameters:
+      - in: query
+        minimum: 1
+        name: limit
+        type: integer
+      - in: query
+        minimum: 1
+        name: page
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/DewaSRY_sociomile-app_pkg_dtos_responsedto.ConversationListPaginateResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/DewaSRY_sociomile-app_pkg_dtos_responsedto.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/DewaSRY_sociomile-app_pkg_dtos_responsedto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get guest conversation by ID
+      tags:
+      - guest-conversation
+    post:
+      consumes:
+      - application/json
+      description: Create a new conversation with an organization (Guest user)
+      parameters:
+      - description: Create Conversation Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/DewaSRY_sociomile-app_pkg_dtos_requestdto.CreateConversationRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/DewaSRY_sociomile-app_pkg_dtos_responsedto.CommonResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/DewaSRY_sociomile-app_pkg_dtos_responsedto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/DewaSRY_sociomile-app_pkg_dtos_responsedto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a new conversation
+      tags:
+      - guest-conversation
   /hub/organizations:
     get:
       consumes:
